--- a/tugas02/lib/loginpage.css
+++ b/tugas02/lib/loginpage.css
@@ -117,52 +117,9 @@ body {
     background: #4d588a;
 }
 
-.footer {
+.footerx {
     text-align: center;
     font-size: 10px;
     color: #73818d;
     margin: 70px 0 0 0;
 }
-
-/* .userbox {
-    text-align: left;
-}
-
-.userbox input {
-    margin: 0 0 0 15px;
-}
-
-.passbox {
-    text-align: left;
-} */
-
-/* label{
-    display: block;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
-}
-
-input{
-    display: block;
-    height: 50px;
-    width: 100%;
-    background-color: rgba(255,255,255,0.07);
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
-}
-
-.signinbutton {
-    margin-top: 50px;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
-} */
